--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="modal-close-overlay" data-modal-overlay></div>
 
-    <div class="modal-content">
+    <!-- <div class="modal-content">
 
       <button class="modal-close-btn" data-modal-close>
         <ion-icon name="close-outline"></ion-icon>
@@ -72,7 +72,7 @@
 
       </div>
 
-    </div>
+    </div> -->
 
   </div>
 
